fix: remove horizontal scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,11 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
+  max-width: 1920px;
   font-family: var(--font-primary);
   font-weight: var(--font-primary-regular);
   display: flex;
